--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -18,7 +18,7 @@
         <div class="container pb-5 pt-5">
             <div class="row m-md-5 align-items-center text-center">
                 <div class="col-lg-6 p-md-5">
-                    <h3 class="font-weight-bold display-4">CINEMATIC.</h3>
+                    <h3 class="font-weight-bold display-4">{{ "CINEMATIC"|filter_name }}.</h3>
                     <p class="display-4 font-weight-bold mb-5"><span class="text-muted">On all aspects. In every way.</span></p>
                     <p class="lead pt-5">Get inspired by the movies watched by your coworkers.</p>
                     <a class="btn btn-outline-dark m-4" href="/register" title="Create an account and subscribe for one year">Register <i class="fas fa-plus"></i></a>
